# market-analysis

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: docs.yml  pre-commit.yml  tests.yml
docs/: conf.py  functionality.md  index.md
examples/: example_sp500_vs_bitcoin.py
src/market_analysis/: __init__.py  asset.py  cachemanager.py  cli.py  config.py  datafetcher.py  utils.py
tests/: test_asset.py  test_cachemanager.py  test_cli.py  test_datafetcher.py  test_utils.py
