[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-analysis"
version = "0.1.0"
description = "Financial asset analysis and correlation toolkit"
authors = [{ name = "Marco Zank" }]
requires-python = ">=3.12"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "yfinance>=0.2",
    "pyarrow>=14.0"
]

[project.scripts]
market-analysis = "market_analysis.cli:main"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pylint",
    "mypy",
    "pytest",
    "pytest-cov"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["market_analysis"]
src_paths = ["src"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", "build", "dist", ".mypy_cache"]

[tool.pylint.MASTER]
ignore = [".venv", "build", "dist"]

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "C0301",
  "R0903",
]

[tool.pylint.BASIC]
good-names = ["i", "j", "k", "x", "y", "z", "df"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
